--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,11 @@ dependencies:
   cloud_firestore: ^4.13.6
   firebase_auth: ^4.15.3
   firebase_storage: ^11.5.6
+  get: ^4.6.6
+  cached_network_image: ^3.3.1
+  flutter_riverpod: ^2.5.1
+  badges: ^3.1.2
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
