--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,7 @@ dependencies:
   flutter_riverpod: ^2.5.1
   badges: ^3.1.2
   uuid: ^4.4.0
-  
+  flutter_rating_bar: ^4.0.1  
 
 
 dev_dependencies:
